# HiFi-Box

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
docs/: theory.md
public/audio/bass-rebound/: manifest.json
public/audio/hearing-sweep/: manifest.json
public/audio/soundfield/: manifest.json
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: audio.rs  commands.rs  mod.rs  models.rs  scoring.rs  storage.rs  testsuite.rs
src/audio/: custom-audio-types.ts  custom-audio.test.ts  custom-audio.ts
src/bass-rebound/: bass-rebound-core.ts  useBassRebound.ts
src/components/: BassReboundStage.tsx  HearingSweepStage.tsx  ImageSizeStage.tsx  InteractiveConceptStage.tsx  SoundFieldStage.tsx  SpatialStage.tsx
src/concept-interactive/: audio-engine.test.ts  audio-engine.ts  random.test.ts  random.ts  scoring.test.ts  scoring.ts  types.ts  useInteractiveConceptSuite.test.tsx  useInteractiveConceptSuite.ts
src/concept-interactive/concepts/: bass.ts  concepts.test.ts  density.ts  dynamic.ts  helpers.ts  ild.ts  index.ts  resolution.ts  separation.ts  transient.ts  treble.ts
src/image-size/: image-size-core.test.ts  image-size-core.ts  useImageSizeTest.ts
src/soundfield/: soundfield-core.test.ts  soundfield-core.ts  useSoundField.ts
src/soundfield/components/: ABXMode.tsx  (+3 more)
src/spatial/: spatial-core.ts  useSpatialTest.ts
src/sweep/: useHearingSweep.ts
(+3 files in other folders)
