[package]
name = "hifi-box"
version = "0.1.0"
description = "HiFi headphone testing toolbox"
authors = ["HiFi-Box"]
edition = "2021"

[lib]
name = "hifi_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1"
cpal = "0.15"
